projects/vb6parse/snapshots/parsers/cst/library/arrays/split/split_key_value_parsing.snap
---
source: projects/vb6parse/tests/library/arrays/split.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: DimStatement
              children:
                - kind: DimKeyword
                  text: Dim
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: kvPair
                - kind: Whitespace
                  text: " "
                - kind: AsKeyword
                  text: As
                - kind: Whitespace
                  text: " "
                - kind: StringKeyword
                  text: String
                - kind: Newline
                  text: "\n"
            - kind: Whitespace
              text: "    "
            - kind: DimStatement
              children:
                - kind: DimKeyword
                  text: Dim
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: parts
                - kind: LeftParenthesis
                  text: (
                - kind: RightParenthesis
                  text: )
                - kind: Whitespace
                  text: " "
                - kind: AsKeyword
                  text: As
                - kind: Whitespace
                  text: " "
                - kind: StringKeyword
                  text: String
                - kind: Newline
                  text: "\n"
            - kind: Whitespace
              text: "    "
            - kind: DimStatement
              children:
                - kind: DimKeyword
                  text: Dim
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: key
                - kind: Whitespace
                  text: " "
                - kind: AsKeyword
                  text: As
                - kind: Whitespace
                  text: " "
                - kind: StringKeyword
                  text: String
                - kind: Newline
                  text: "\n"
            - kind: Whitespace
              text: "    "
            - kind: DimStatement
              children:
                - kind: DimKeyword
                  text: Dim
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: value
                - kind: Whitespace
                  text: " "
                - kind: AsKeyword
                  text: As
                - kind: Whitespace
                  text: " "
                - kind: StringKeyword
                  text: String
                - kind: Newline
                  text: "\n"
            - kind: Whitespace
              text: "    "
            - kind: AssignmentStatement
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: kvPair
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: StringLiteralExpression
                  children:
                    - kind: StringLiteral
                      text: "\"name=John\""
                - kind: Newline
                  text: "\n"
            - kind: Whitespace
              text: "    "
            - kind: AssignmentStatement
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: parts
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: CallExpression
                  children:
                    - kind: Identifier
                      text: Split
                    - kind: LeftParenthesis
                      text: (
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: IdentifierExpression
                              children:
                                - kind: Identifier
                                  text: kvPair
                        - kind: Comma
                          text: ","
                        - kind: Whitespace
                          text: " "
                        - kind: Argument
                          children:
                            - kind: StringLiteralExpression
                              children:
                                - kind: StringLiteral
                                  text: "\"=\""
                        - kind: Comma
                          text: ","
                        - kind: Whitespace
                          text: " "
                        - kind: Argument
                          children:
                            - kind: NumericLiteralExpression
                              children:
                                - kind: IntegerLiteral
                                  text: "2"
                    - kind: RightParenthesis
                      text: )
                - kind: Newline
                  text: "\n"
            - kind: Whitespace
              text: "    "
            - kind: AssignmentStatement
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: key
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: CallExpression
                  children:
                    - kind: Identifier
                      text: parts
                    - kind: LeftParenthesis
                      text: (
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: NumericLiteralExpression
                              children:
                                - kind: IntegerLiteral
                                  text: "0"
                    - kind: RightParenthesis
                      text: )
                - kind: Newline
                  text: "\n"
            - kind: Whitespace
              text: "    "
            - kind: AssignmentStatement
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: value
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: CallExpression
                  children:
                    - kind: Identifier
                      text: parts
                    - kind: LeftParenthesis
                      text: (
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: NumericLiteralExpression
                              children:
                                - kind: IntegerLiteral
                                  text: "1"
                    - kind: RightParenthesis
                      text: )
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
